--- a/src/main/Resouces/db.properties
+++ b/src/main/Resouces/db.properties
@@ -1,11 +1,11 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_users?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/spring_users
 db.username=root
 db.password=root
 
 # Hibernate properties
+hibernate.entity.package=web.models
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
-hibernate.entity.package=web.model
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
